[gd_scene load_steps=2 format=3 uid="uid://cg3hylang5fxn"]

[ext_resource type="Script" uid="uid://ceueq7kwlfv2m" path="res://main.gd" id="1_j0gfq"]

[node name="Main" type="Node2D"]
script = ExtResource("1_j0gfq")

[node name="Button" type="Button" parent="."]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 44.0
offset_top = 47.0
offset_right = 324.0
offset_bottom = 109.0
grow_horizontal = 2
grow_vertical = 2
text = "Open"

[node name="Button1" type="Button" parent="."]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 45.0
offset_top = 217.0
offset_right = 325.0
offset_bottom = 279.0
grow_horizontal = 2
grow_vertical = 2
text = "Get"

[node name="Button2" type="Button" parent="."]
offset_left = 46.0
offset_top = 368.0
offset_right = 317.0
offset_bottom = 448.0
text = "Close"

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = 370.0
offset_top = 18.0
offset_right = 970.0
offset_bottom = 618.0
expand_mode = 1

[node name="Label" type="Label" parent="."]
offset_left = 12.0
offset_top = 551.0
offset_right = 1138.0
offset_bottom = 627.0
theme_override_font_sizes/font_size = 24

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button1" to="." method="_on_Button1_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
